Change the language of writing page

--- a/write.html
+++ b/write.html
@@ -15,11 +15,11 @@
 </style>
 </head>
 <body>
-	<h1 class="title">这个页面可以写东西！</h1>
+	<h1 class="title">You can write something here!</h1>
 	<div>
-		<textarea placeholder="可以在这里写东西哦！" name="write" rows="10" cols="50" autofocus="autofocus"></textarea>
+		<textarea placeholder="Write here!" name="write" rows="10" cols="50" autofocus="autofocus"></textarea>
 		<br />
-		<button type="submit" value="提交" formaction="index.html" formtarget="_selt"><a href="index.html">写完了</a></button>
+		<button type="submit" value="Submit" formaction="index.html" formtarget="_selt"><a href="index.html">Done</a></button>
 	</div>
 </body>
 </html>
