Click the pen please!

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 </head>
 
 <body onload="EraseBoarder()">
-	<p>Click the pen</p>
+	<p>Click the pen please!</p>
 	<div>
 		<canvas id = "myCanvas" width = '1920' height = '1080'></canvas>
 		<img src="bg.jpg" usemap="#bg" />
